--- a/src/01-gallery.html
+++ b/src/01-gallery.html
@@ -15,6 +15,6 @@
     <div class="gallery"></div>
     
 
-    <script src="js/01-gallery.js" type="module"></script>
+    <script src=".js/01-gallery.js" type="module"></script>
   </body>
 </html>
