--- a/src/02-video.html
+++ b/src/02-video.html
@@ -20,7 +20,7 @@
       allow="autoplay; encrypted-media"
     ></iframe>
 
-    <script src="js/02-video.js" type="module"></script>
+    <script src=".js/02-video.js" type="module"></script>
     <script src="https://player.vimeo.com/api/player.js"></script>
     <script>
       const iframe = document.querySelector('iframe');
